2000-08-23  Andreas Jaeger  <aj@suse.de>

	* include/wchar.h: Add some pure attributes.

	* time/time.h: Add const attribute for dysize.

	* include/stdlib.h: Add malloc attribute to __posix memalign.

	* stdlib/stdlib.h: Add some pure and malloc attributes.
	* wcsmbs/wchar.h: Likewise.

	* dirent/dirent.h: Add some pure attributes.
	* include/dirent.h: Likewise.

2000-08-23  Jakub Jelinek  <jakub@redhat.com>

	* inet/netinet/in.h (struct in6_addr): Don't enforce 64bit alignment
	on 64bit arches.

2000-08-22  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/iso-2022-jp.c: In conversion to ISO-2022-JP, add two
	missing buffer size checks.

2000-08-23  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Use __setrlimit as
	strong name.
	* sysdeps/unix/sysv/linux/sparc/sparc64/syscalls.list: Likewise.

	* sysdeps/unix/sysv/linux/dl-osinfo.h: Include "kernel-features.h",
	otherwise __LINUX_KERNEL_VERSION might not be defined.
	(MIN): Define if not already defined.

2000-08-22  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/vfprintf.c: Handle %F format.
	* stdio-common/printf-parse.h (parse_one_spec): Likewise.
	Reported by Joseph S. Myers <jsm28@cam.ac.uk>.

	* stdio-common/tstdiomisc.c: Add test for %F printf format.

	* po/zh.po: New file.

	* iconvdata/sjis.c: In conversion from UCS4, correct test for
	enough room in target buffer.
	Patch by KUSANO Takayuki <AE5T-KSN@asahi-net.or.jp> [PR libc/1865].
	* iconvdata/bug-iconv1.c: New file.
	* iconvdata/Makefile (tests): Add bug-iconv1.

	* locale/iso-4217.def: Update entry for Nicaragua.

2000-08-22  Mark Kettenis  <kettenis@gnu.org>

	* hurd/hurdsig.c: Rearrange headers a bit.
	(_hurdsig_init): Block until _hurd_msgport_thread is initialized
	when cthreads is being used.

2000-08-22  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile (distribute): Add dl-osinfo.h.
	* sysdeps/generic/dl-osinfo.h: New file.
	* sysdeps/unix/sysv/linux/dl-osinfo.h: New file.