@@ -762,6 +762,53 @@ class          "combining_level3"; /
    <U0CD5>;<U0CD6>;<U0D57>;<U0F39>;<U302A>..<U302F>;<U3099>;<U309A>
 %
 
+translit_start
+
+% COPYRIGHT SIGN.
+<U00A9> "<U0028><U0043><U0029>"
+% LEFT-POINTING DOUBLE ANGLE QUOTATION MARK.
+<U00AB> "<U003C><U003C>"
+% REGISTERED SIGN.
+<U00AE> "<U0028><U0052><U0029>"
+% RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK.
+<U00BB> "<U003E><U003E>"
+% VULGAR FRACTION ONE QUARTER.
+<U00BC> "<U0031><U002F><U0034>"
+% VULGAR FRACTION ONE HALF.
+<U00BD> "<U0031><U002F><U0032>"
+% VULGAR FRACTION THREE QUARTERS.
+<U00BE> "<U0033><U002F><U0034>"
+% LATIN CAPITAL LETTER A WITH DIAERESIS.
+<U00C4> "<U0041><U0308>";"<U0041><U0045>"
+% LATIN CAPITAL LETTER A WITH RING ABOVE.
+<U00C5> <U212B>;"<U0041><U030A>";"<U0041><U0041>"
+% LATIN CAPITAL LETTER AE.
+<U00C6> "<U0041><U0045>"
+% LATIN CAPITAL LETTER O WITH DIAERESIS.
+<U00D6> "<U004F><U0045>"
+% LATIN CAPITAL LETTER U WITH DIAERESIS.
+<U00DC> "<U0055><U0045>"
+% LATIN SMALL LETTER SHARP S.
+<U00DF> "<U0073><U0073>"
+% LATIN SMALL LETTER A WITH DIAERESIS.
+<U00E4> "<U0061><U0308>";"<U0061><U0065>"
+% LATIN SMALL LETTER A WITH RING ABOVE.
+<U00E5> "<U0061><U030A>";"<U0061><U0061>"
+% LATIN SMALL LETTER AE.
+<U00E6> "<U0061><U0065>"
+% LATIN SMALL LETTER O WITH DIAERESIS.
+<U00F6> "<U006F><U0065>"
+% LATIN SMALL LETTER U WITH DIAERESIS.
+<U00FC> "<U0075><U0065>"
+% LEFT DOUBLE QUOTATION MARK.
+<U201C> <U0022>
+% RIGHT DOUBLE QUOTATION MARK.
+<U201D> <U0022>
+
+default_missing <UFFFD>;<U003F>
+
+translit_end
+
 END LC_CTYPE
 
 LC_COLLATE
