@@ -1,3 +1,9 @@
+2000-08-23  Ulrich Drepper  <drepper@redhat.com>
+
+	* locale/programs/ld-ctype.c (ctype_read): Allow more than one
+	default_missing character being specified, pick the first
+	representable.
+
 2000-08-23  Andreas Jaeger  <aj@suse.de>
 
 	* include/wchar.h: Add some pure attributes.
